tests/NormalTests/paczka1/fuzzy1/95676536.err
Error in line 11: S958 S958 29,6
Error in line 24: 6yAUX6frP S209 2,4
Error in line 30: 9cpWsZ S219 60,5
Error in line 37: KTMzcsC S219 80,9
Error in line 36: 9cpWsZ S858 69,5
